@@ -226,6 +226,7 @@
     <file>pics/overlay_family_basic_keyboard.png</file>
     <file>pics/overlay_controller_left.png</file>
     <file>pics/overlay_subor_keyboard_sb97.png</file>
+    <file>pics/overlay_fastforward_blue.png</file>
     <file>pics/hostkey.png</file>
     <file>pics/hostkey_captured.png</file>
     <file>pics/mouse_left_button.png</file>
